force-app/main/default/objects/Sponsorable_Attribute_Definition__c/Sponsorable_Attribute_Definition__c.object-meta.xml
<CustomObject>
    <label>Sponsorable Attribute Definition</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorable Attribute Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>