force-app/main/default/objects/Sponsorable_Attribute_Definition__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <inlineHelpText>Default value for Text and Numbers</inlineHelpText>
    <label>Default Value</label>
    <length>128</length>
    <type>Text</type>
</CustomField>