force-app/main/default/objects/Sponsorable_Attribute_Definition__c/fields/Picklist_Choices__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Choices__c</fullName>
    <inlineHelpText>Semicolon separated list of picklist values if the Data Type is set to Picklist</inlineHelpText>
    <label>Picklist Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>