force-app/main/default/objects/Sponsorable_Attribute_Definition__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if this attribute is required to make a sponsorable active for sponsoring</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>